# kagu

./: Cargo.toml  Cargo.toml.bak  LICENSE.txt  README.md
assets/scripts/: stream.sh
audio/: Cargo.toml
audio/src/: audio_buffer.rs  audio_buffer_manager.rs  audio_io.rs  audio_manager.rs  lib.rs  new_audio_manager.rs
bot-example/: Cargo.toml
certs/: CertConfig.cnf  HowToGenerateSelfSigned.txt  cert.pem  pkey.pem
client/: Cargo.toml
client-bin/: Cargo.toml
client/src/: audio_broadcaster.rs  audio_file_buffer.rs  client.rs  client_handler.rs  client_manager.rs  client_message.rs  lib.rs  new_client.rs  ping_counter.rs
kagu/: Cargo.toml
kagu-server/: Cargo.toml
message/: Cargo.toml
message/src/: file_transfer.rs  lib.rs  message.rs
network_manager/: Cargo.toml
network_manager/src/: connection_manager.rs  delayed_send_packet.rs  lib.rs  network_manager.rs  quiche_config.rs  socket_manager.rs
realms/: Cargo.toml
realms/src/: channels.rs  realm.rs  realm_desc.rs  realms_manager.rs
realms/src/channels/: text_channel.rs  voice_channel.rs
server/: Cargo.toml
server-bin/: Cargo.toml
server/src/: lib.rs  new_server.rs  server.rs  server_message.rs  server_state.rs
src/: audio_manager.rs  client.rs  lib.rs  message.rs  network_manager.rs  realms.rs  server.rs  tui.rs  types.rs  user.rs
src/audio/: rtp.rs
src/audio_manager/: mod.rs
src/client/: client.rs  mod.rs
src/message/: message.rs  mod.rs
src/network_manager/: mod.rs  network_manager.rs
src/realms/: realm.rs  realm_desc.rs  realms_manager.rs
src/realms/channels/: text_channel.rs
src/rtp/: mod.rs
src/server/: mod.rs  server.rs
src/text_channel/: mod.rs
src/tui/: app.rs  command.rs  event.rs  handler.rs  handlers.rs  input_buffer.rs  popups.rs  screens.rs  settings.rs  stateful_list.rs  tui.rs  ui.rs
src/tui/handlers/: main.rs  popups.rs  screens.rs
src/tui/handlers/popups/: add_channel.rs  add_realm.rs  general.rs  member.rs  remove_channel.rs  remove_realm.rs  yes_no.rs
src/tui/handlers/screens/: main.rs  personal.rs  settings.rs
src/tui/popups/: add_channel_popup.rs  add_realm_popup.rs  general_popup.rs  member_popup.rs  popup_traits.rs  remove_channel_popup.rs  remove_realm_popup.rs  yes_no_popup.rs
src/tui/screens/: main.rs  main_screen.rs  personal.rs  settings.rs
src/user/: mod.rs  user.rs
src/voice_channel/: mod.rs
tui/: Cargo.toml
tui/src/: app.rs  event.rs  handler.rs  input_buffer.rs  lib.rs  popups.rs  screens.rs  stateful_list.rs  tui.rs  ui.rs  user_settings.rs
tui/src/handlers/: popups.rs  screens.rs
tui/src/handlers/popups/: add_channel.rs  add_realm.rs  general.rs  member.rs  remove_channel.rs  remove_realm.rs  yes_no.rs
tui/src/handlers/screens/: main.rs  settings.rs
tui/src/popups/: add_channel_popup.rs  add_realm_popup.rs  general_popup.rs  member_popup.rs  popup_traits.rs  remove_channel_popup.rs  remove_realm_popup.rs  yes_no_popup.rs
tui/src/screens/: main.rs  personal.rs  settings.rs  settings_views.rs
tui/src/screens/settings_views/: audio_settings.rs
types/: Cargo.toml
types/src/: lib.rs
user/: Cargo.toml
user/src/: lib.rs
