[package]
name = "kagu"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
cpal = "0.15.2"
bincode = { version = "1.3.3" }
serde = { version = "1.0.160", features = ["derive"] }
type-layout = "0.2.0"
ringbuf = "0.3.3"
anyhow = "1.0.71"
quinn = "*"
rcgen = "0.10.0"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
local-ip-address = "0.5.3"
crossterm = "0.26.1"
tui = { package = "ratatui", version = "0.24.0" }
unicode-width = "0.1"
image = "0.24.7"
clap = { version = "4.3.23", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
