[workspace]
resolver = "2"
package.description = "A server and client with a rich terminal user interface resembling a familiar chat service."
package.license-file = "LICENSE.txt"
package.homepage = "https://github.com/bblsh/kagu"
package.repository = "https://github.com/bblsh/kagu"

members = [
    "kagu-server",
    "kagu",
    "server",
    "client",
    "message",
    "network_manager",
    "realms",
    "tui",
    "user",
    "audio",
    "types"
]