[package]
name = "audio"
version = "0.1.0"
edition = "2021"
description = "Audio manager for the Kagu client."
license-file = "LICENSE.txt"
homepage = "https://github.com/bblsh/kagu"
repository = "https://github.com/bblsh/kagu"

[dependencies]
message = { path = "../message"}
types = { path = "../types" }

tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
cpal = "0.15.2"
bincode = { version = "1.3.3" }
serde = { version = "1.0.160", features = ["derive"] }
quinn = "*"
ringbuf = "0.3.3"