[package]
name = "audio"
version = "0.1.0"
edition = "2021"
description = "Audio manager for the Kagu client."
license-file = "LICENSE.txt"
homepage = "https://github.com/bblsh/kagu"
repository = "https://github.com/bblsh/kagu"

[dependencies]
message = { path = "../message"}
types = { path = "../types" }

cpal = { version = "0.15.2" }
opus = { version = "*" }
crossbeam = { version = "0.8.4" }
chrono = { version = "0.4.31" }
rodio = { version = "*" }