[package]
name = "client-bin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
tui = { path = "../tui" }
client = { path = "../client" }

clap = { version = "4.3.23", features = ["derive"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }