[package]
name = "client"
version = "0.1.0"
edition = "2021"
description = "Client backend used by the Kagu client."
license-file = "LICENSE.txt"
homepage = "https://github.com/bblsh/kagu"
repository = "https://github.com/bblsh/kagu"

[dependencies]
types = { path = "../types" }
user = { path = "../user" }
realms = { path = "../realms" }
message = { path = "../message" }
audio = { path = "../audio" }
network_manager = { path = "../network_manager" }

tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
quinn = "*"