[package]
name = "client"
version = "0.1.0"
edition = "2021"
description = "Client backend used by the Kagu client."
license-file = "LICENSE.txt"
homepage = "https://github.com/bblsh/kagu"
repository = "https://github.com/bblsh/kagu"

[dependencies]
types = { path = "../types", version = "*" }
user = { path = "../user", version = "*"  }
realms = { path = "../realms", version = "*"  }
message = { path = "../message", version = "*"  }
audio = { path = "../audio", version = "*"  }
network_manager = { path = "../network_manager", version = "*"  }

mio = { version = "*", features = ["os-poll", "net"]}
crossbeam = { version = "0.8.4" }
swiftlet_quic = { version = "*", git = "https://github.com/MediaEnhanced/Swiftlet.git" }
chrono = { version = "0.4.31", features = ["serde"] }
opus = { version = "*" }