[package]
name = "kagu-server"
version = "0.1.0"
edition = "2021"
description = "A Kagu server to serve Kagu clients."
license-file = "LICENSE.txt"
homepage = "https://github.com/bblsh/kagu"
repository = "https://github.com/bblsh/kagu"

[[bin]]
name = "kagu-server"
path = "src/bin/server.rs"

[dependencies]
server = { path = "../server" }

clap = { version = "4.3.23", features = ["derive"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }