[package]
name = "message"
version = "0.1.0"
edition = "2021"

[dependencies]
realms = { path = "../realms" }
types = { path = "../types" }
user = { path = "../user" }

bincode = { version = "1.3.3" }
serde = { version = "1.0.160", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }