[package]
name = "network_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "*"
anyhow = "1.0.71"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
rcgen = "0.10.0"