[package]
name = "network_manager"
version = "0.1.0"
edition = "2021"
description = "Network initializer used by the Kagu server client."
license-file = "LICENSE.txt"
homepage = "https://github.com/bblsh/kagu"
repository = "https://github.com/bblsh/kagu"

[dependencies]
quinn = "*"
anyhow = "1.0.71"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
rcgen = "0.10.0"