[package]
name = "network_manager"
version = "0.1.0"
edition = "2021"
description = "Network initializer used by the Kagu server client."
license-file = "LICENSE.txt"
homepage = "https://github.com/bblsh/kagu"
repository = "https://github.com/bblsh/kagu"

[dependencies]
quiche = { version = "*" }
mio = { version = "*", features = ["os-poll", "net"]}
ring = { version = "0.17.7" }
crossbeam = { version = "0.8.4" }