[package]
name = "realms"
version = "0.1.0"
edition = "2021"
description = "Realm structs used by the Kagu server and client."
license-file = "LICENSE.txt"
homepage = "https://github.com/bblsh/kagu"
repository = "https://github.com/bblsh/kagu"

[dependencies]
user = { path = "../user" }
types = { path = "../types" }

bincode = { version = "1.3.3" }
serde = { version = "1.0.160", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }