[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
message = { path = "../message"}
realms = { path = "../realms" }
types = { path = "../types" }
user = { path = "../user" }
network_manager = { path = "../network_manager" }

tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
quinn = "*"
bincode = { version = "1.3.3" }
serde = { version = "1.0.160", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }