[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realms = { path = "../realms" }
types = { path = "../types" }
user = { path = "../user" }
client = { path = "../client" }
message = { path = "../message"}

chrono = { version = "0.4.31", features = ["serde"] }
ratatui = { version = "0.25.0" }
crossterm = "0.26.1"
unicode-width = "0.1"
textwrap = "0.16.0"
tui-widget-list = { git = "https://github.com/bblsh/tui-widget-list"}